--- a/DuelOfReigns/src/App.css
+++ b/DuelOfReigns/src/App.css
@@ -1,42 +1,52 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,900;1,700&display=swap');
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/*
+  https://coolors.co/palettes/popular/pastel
+  # Pastel Universe
+  Replace #14141F with #FFF1E6
+  Replace #FFFFFF with #000000;
+*/
+
+body {
+  background: #FFF1E6;
+  font-family: 'Roboto', sans-serif;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1, h2 {
+  color: #000000;
+  font-weight: 500;
+  font-size: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+p {
+  font-weight: 400;
+  font-size: 1rem;
+  color: #000000;
+  opacity: 85%;
+  line-height: 35px;
 }
 
-.card {
-  padding: 2em;
+a {
+  text-decoration: none;
+  color: unset;
 }
 
-.read-the-docs {
-  color: #888;
+a:hover {
+  color: unset;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+section, footer {
+  padding: 60px 0px;
 }
