--- a/DuelOfReigns/src/components/Footer/Footer.css
+++ b/DuelOfReigns/src/components/Footer/Footer.css
@@ -5,7 +5,7 @@
 
 .footer {
     padding-bottom: 30px;
-    z-index: 1;
+    background: #E6A58E;
 }
 
 .list__item {
@@ -54,7 +54,7 @@
 }
 
 .social__links span a:hover {
-    color: #b992b0;
+    color: #FFF1E6;
 }
 
 .copyright {
