--- a/DuelOfReigns/src/components/Header/Header.css
+++ b/DuelOfReigns/src/components/Header/Header.css
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     z-index: 1000000;
-    /* background: white; */
+    background: white;
 }
 
 .navigation {
@@ -32,7 +32,7 @@
 }
 
 .active {
-    color: #b992b0 !important;
+    color: #E6A58E !important;
 }
 
 .btn {
