--- a/DuelOfReigns/src/components/UI/LibraryFaction/LibraryFaction.css
+++ b/DuelOfReigns/src/components/UI/LibraryFaction/LibraryFaction.css
@@ -1,36 +1,15 @@
+.library__section {
+    padding: 120px auto;
+}
+
 .single__hero__card {
-    padding: 5px;
-    background: #000;
     border-radius: 25px;
 }
 
-/* .card__img img {
-    border-radius: 10px;
+.btn__area {
+    margin-top: 30px;
 }
 
-.card__img {
-    margin-bottom: 10px;
+.card__content .card__title {
+    padding-top: 20px;
 }
-
-.card__title {
-    color: #000000;
-    font-size: 1rem;
-    margin-bottom: 15px;
-}
-
-.creator__img {
-    width: 40px;
-    height: 40px;
-}
-
-.creator__info h6 {
-    font-size: 0.8rem;
-    color: #000000;
-    opacity: 80%;
-    margin-bottom: 0;
-}
-
-.creator__info p {
-    font-size: 0.7rem;
-    columns: #000000;
-} */
