--- a/DuelOfReigns/src/components/UI/NewsSection/NewsSection.css
+++ b/DuelOfReigns/src/components/UI/NewsSection/NewsSection.css
@@ -6,7 +6,6 @@
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 5px;
-    padding: 20px;
     margin: 20px 0;
     transition: transform 0.2s ease-in-out;
 }
@@ -14,6 +13,10 @@
 .single__news__card:hover {
     transform: translateY(-5px);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.news__info {
+    padding: 20px;
 }
 
 .news__title {
