--- a/DuelOfReigns/src/components/UI/LoginSection/LoginSection.css
+++ b/DuelOfReigns/src/components/UI/LoginSection/LoginSection.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 60px 0px 0px 0px;
+    padding: 30px 0px 0px 0px;
 }
 
 .image__section {
@@ -29,29 +29,28 @@
 }
 
 .login__form h2 {
-    text-align: center;
-    margin-bottom: 20px;
+    font-weight: 300;
+}
+
+.login__form p {
+    font-weight: 300;
+}
+
+.login__form p span {
+    color: #ba7961;
 }
 
 .form-label {
-    font-weight: bold;
+    font-weight: 300;
 }
 
-.form-control {
-    margin-bottom: 15px;
+.btn__account {
+    background: transparent;
+    color: #000000;
+    font-size: 0.9rem;
 }
 
-.btn-primary {
-    background-color: #007bff; /* Couleur du bouton de connexion */
-    color: #fff;
-    border: none;
-}
-
-.btn-primary:hover {
-    background-color: #0056b3; /* Couleur du bouton de connexion au survol */
-}
-
-p {
-    text-align: center;
-    margin-top: 15px;
+.btn__account:hover {
+    background: #ba7961;
+    border: #ba7961;;
 }
