--- a/DuelOfReigns/src/components/UI/LoginSection/LoginSection.css
+++ b/DuelOfReigns/src/components/UI/LoginSection/LoginSection.css
@@ -44,13 +44,23 @@
     font-weight: 300;
 }
 
-.btn__account {
-    background: transparent;
-    color: #000000;
-    font-size: 0.9rem;
+.form-control {
+    border-radius: 5px;
 }
 
-.btn__account:hover {
-    background: #ba7961;
-    border: #ba7961;;
+.form-control:focus {
+    border-color: inherit;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    outline: none;
+}
+
+.btn__account {
+    border: none;
+    outline: none;
+    padding: 7px 25px;
+    border-radius: 50px;
+    border: 1px solid #000000;
+    font-size: 0.9rem;
+    background: transparent;
 }
