--- a/DuelOfReigns/src/components/Header/Header.css
+++ b/DuelOfReigns/src/components/Header/Header.css
@@ -63,3 +63,44 @@
     font-size: 1.3rem;
     display: none;
 }
+
+@media only screen and (max-width: 768px) {
+    .nav__menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 22222222;
+        display: none;
+    }
+
+    .active__menu {
+        display: block;
+    }
+
+    .nav__list {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 250px;
+        height: 100%;
+        background-color: #FFFFFF;
+        z-index: 33333333;
+        flex-direction: column;
+        padding-top: 40px;
+
+    }
+
+    .mobile__menu {
+        display: block;
+    }
+
+    .btn {
+        padding: 4px 25px;
+    }
+
+    .btn a {
+        font-size: 0.7em;
+    }
+}
