--- a/DuelOfReigns/src/components/UI/HeroSection/HeroSection.css
+++ b/DuelOfReigns/src/components/UI/HeroSection/HeroSection.css
@@ -51,10 +51,49 @@
 }
 
 .hero__img {
-    width: 100%;
+    width: 500px;
     margin-left: auto;
 }
 
 .hero__img img {
     border-radius: 7px;
+}
+
+@media only screen and (max-width: 768px) {
+    .hero__section {
+        padding: 160px 40px 20px 40px;
+    }
+    
+    .hero__img {
+        width: 100%;
+    }
+
+    .hero__content h2 {
+        font-size: 1.5rem;
+        line-height: 45px;
+    }
+
+    .hero__content p  {
+        font-size: 0.8rem;
+        line-height: 25px;
+    }
+
+    .download__btn,
+    .tutorial__btn {
+        padding: 4px 25px;
+    }
+
+    .download__btn a,
+    .tutorial__btn a {
+        padding: 4px 25px;
+        font-size: 0.7rem;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .hero__img {
+        width: 100%;
+        margin: auto;
+        margin-top: 50px;
+    }
 }
