fix(libraryFaction) UI

--- a/DuelOfReigns/src/components/UI/LibraryFaction/LibraryFaction.css
+++ b/DuelOfReigns/src/components/UI/LibraryFaction/LibraryFaction.css
@@ -1,5 +1,10 @@
 .single__hero__card {
     border-radius: 25px;
+    margin: 0.25rem 0 0.25rem 0;
+}
+
+.single__hero__card:hover {
+    box-shadow: 5px 5px 15px 5px #969292;
 }
 
 .btn__area {
